snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-sources.jar.sha1
46940740fec0b0268aaaa21f7458413e86bf3eb9